Update backend with booking and room changes